--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   calc-api:
     image: verdantwinds/lbg-grad-compose-api
-    build: ./calculator.api
+    build: ./calculator-api
     ports:
       - target: 8080
         published: 8081
